# days-afterX_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  QURRENT_STEPS.md  README.md  TODO.md  VERSIONS.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 5d89b6321455_create_users_and_events_tables.py
docs/: architecture_diagram.md  fsm_diagram.md
src/: config.py  main.py
src/db/: database.py  models.py
src/handlers/: common_handlers.py  event_handlers.py  states.py  user_handlers.py
src/keyboards/: inline.py
src/lexicon/: lexicon_ru.py
src/middlewares/: auth.py  db.py
src/utils/: formatters.py  text_parser.py
