[tool.poetry]
name = "days-after-x-bot"
version = "0.1.0"
description = "Telegram bot for tracking days since events"
authors = ["xipsin <xipsin@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
python-dotenv = "^1.0.0"
apscheduler = "^3.10.4"
python-logging-loki = "^0.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
